footer component styled on 1280px+ & fix big link's letter-spacing on tablet

--- a/src/style/_footer.scss
+++ b/src/style/_footer.scss
@@ -103,7 +103,7 @@ footer {
 
         .footer--lets--talk--link {
             font-size: 4rem;
-            letter-spacing: -.3px;
+            letter-spacing: -3px;
             line-height: 66px;
         }
     }
@@ -125,6 +125,16 @@ footer {
         .socials--locations--container {
             gap: 1rem;
             align-items: flex-end;
+        }
+    }
+}
+
+@media screen and (min-width: 1280px) {
+    footer {
+        .footer--lets--talk--link {
+            font-size: 4rem;
+            letter-spacing: -3px;
+            line-height: 66px;
         }
     }
 }
